2002-03-28  Richard Williamson  <rjw@apple.com>

        Increased size default for initial layout.
        
	* WebView.subproj/IFPreferences.mm: (+[IFPreferences load]):

2002-03-28  Richard Williamson  <rjw@apple.com>

        Fixed big leak of any document that had a frame or iframe.
        
	* WebView.subproj/IFWebDataSource.mm: (-[IFWebDataSource retain]):
	* WebView.subproj/IFWebDataSourcePrivate.mm: (-[IFWebDataSourcePrivate dealloc]),
	(-[IFWebDataSource _setParent:]):

2002-03-28  Richard Williamson  <rjw@apple.com>
    
        Modified the initial layout policy.

	* WebView.subproj/IFBaseWebControllerPrivate.mm: (-[IFBaseWebController
	_receivedProgress:forResource:fromDataSource:]), (-[IFBaseWebController
	_mainReceivedProgress:forResource:fromDataSource:]):
	* WebView.subproj/IFPreferences.mm: (+[IFPreferences load]), (-[IFPreferences
	_initialTimedLayoutDelay]), (-[IFPreferences _initialTimedLayoutSize]):
	* WebView.subproj/IFPreferencesPrivate.h:
	* WebView.subproj/IFWebFramePrivate.h:
	* WebView.subproj/IFWebFramePrivate.mm: (-[IFWebFrame
	_transitionProvisionalToLayoutAcceptable]), (-[IFWebFrame
	_transitionProvisionalToCommitted]), (-[IFWebFrame _initialLayout:]),
	(-[IFWebFrame _isLoadComplete]):

2002-03-28  Darin Adler  <darin@apple.com>

        New private interface for getting at the cache.

	* Misc.subproj/IFCache.h: New.
	* Misc.subproj/IFCache.mm: New.
	* WebKit.pbproj/project.pbxproj: Added IFCache files.

2002-03-28  Darin Adler  <darin@apple.com>

	* WebView.subproj/IFBaseWebController.mm:
        (-[IFBaseWebController locationChangeDone:forFrame:]): Remove log of errors
        loading now that we have the activity viewer.

2002-03-28  Richard Williamson  <rjw@apple.com>

        Modified the initial layout policy.  We now try to layout as close
        as possible to WebKitInitialTimedLayoutDelay seconds after the
        load was started, not after the provisional-to-committed transition.