@@ -1,3 +1,9 @@
+2002-03-29  Darin Adler  <darin@apple.com>
+
+	* WebView.subproj/IFWebFramePrivate.mm: (-[IFWebFramePrivate dealloc]): Deref the
+        renderFramePart, and autorelease the provisionalDataSource.
+	(-[IFWebFramePrivate setRenderFramePart:]): Ref renderFramePart while we hold it.
+
 2002-03-28  Richard Williamson  <rjw@apple.com>
 
         Increased size default for initial layout.
